2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grog]: Migrate expansion of Perl interpreter in shebang.
	Use the same technique as afmtodit, mmroff, gropdf, and pdfmom.

	* src/utils/grog/grog.am (grog): Replace "@PERL@" instead of
	'^\(#! \).*perl'.
	* src/utils/grog/grog.pl: Use "@PERL@" in shebang.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[afmtodit]: Give program a usage message.

	* src/utils/afmtodit/afmtodit.pl: Add new scalar `want_help` of
	Boolean sense.  Recognize new long option `--help`, attached to
	`$want_help`.  Stop stripping off directory name components from
	program name when emitting diagnostics.  No other groff program
	does this (well, gropdf did until recently), and it might save
	users some confusion if they're working with multiple copies of
	afmtodit.
	(usage): New subroutine reports usage message.  If help was
	explicitly requested, summarize purpose of program and steer
	reader to man page.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[afmtodit]: Migrate expansion of Perl interpreter in shebang.
	Use the same technique as mmroff, gropdf, and pdfmom.

	* src/utils/afmtodit/afmtodit.am (afmtodit): Replace "@PERL@"
	instead of "/usr/bin/perl".
	* src/utils/afmtodit/afmtodit.pl: Use "@PERL@" in shebang.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[gropdf] Give program a usage message.

	* src/devices/gropdf/gropdf.pl: Add new scalar `want_help` of
	Boolean sense.  Recognize new long option `--help`, attached to
	`$want_help`.
	(usage): New subroutine reports usage message.  If help was
	explicitly requested, summarize purpose of program and steer
	reader to man page.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/xditview/xditview.c (Syntax): "#if 0" out
	reference to `-noPolyText` option, whose effect is likewise
	bracketed in another file.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>
